<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_edit_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_event"
        android:background="@drawable/button_primary"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete_event"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_delete_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_event"
        android:background="@drawable/button_danger"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/btn_edit_event"
        app:layout_constraintEnd_toStartOf="@id/btn_share_qr"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_share_qr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_qr"
        android:background="@drawable/button_secondary"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toEndOf="@id/btn_delete_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
